<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- INICIO - LinarLayout Total -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <!-- INICIO - Imagen de estudiante -->
        <ImageView
            android:id="@+id/studentImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/student"
            android:layout_marginTop="@dimen/image_marginTop_stdent"
            android:layout_marginRight="@dimen/image_marginRight_stdent"/>
        <!-- FIN - Imagen de estudiante -->
        <!-- INICIO - LinearLayout datos -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!-- INICIO - Nombre completo -->
            <TextView
                android:id="@+id/tv_student_name_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textView_student_name_item"
                android:layout_marginTop="@dimen/textView_marginTop_student_name"
                android:textSize="@dimen/textView_textSize_studentName"
                android:textStyle="bold"/>
            <!-- FIN - Nombre completo -->
            <!-- INICIO - DNI -->
            <TextView
                android:id="@+id/tv_student_dni_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textView_student_dni_item" />
            <!-- FIN - DNI -->
            <!-- INICIO - Horas -->
            <TextView
                android:id="@+id/tv_student_hours_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textView_student_hours_item" />
            <!-- FIN - Horas -->
            <!-- INICIO - Minutos -->
            <TextView
                android:id="@+id/tv_student_minutes_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textView_student_minutes_item" />
            <!-- FIN - Minutos -->
            <!-- INICIO - Créditos -->
            <TextView
                android:id="@+id/tv_student_credits_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textView_student_credits_item" />
            <!-- FIN - Créditos -->
        </LinearLayout>
        <!-- FIN - LinearLayout datos -->
    </LinearLayout>
    <!-- FIN - LinarLayout Total -->

</android.support.design.widget.CoordinatorLayout>