<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">
    <!-- INICIO - ScrollView -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <!-- INICIO - LinearLayout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <!-- INICIO - Título home -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textView_home"
                android:paddingTop="@dimen/textView_padding_home"
                android:textAlignment="center"
                android:textSize="@dimen/textView_textSize_home"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"/>
            <!-- FIN - Título home -->
            <!-- INICIO - EditText búsqueda -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextColorBlack"
                android:layout_marginTop="@dimen/edittext_margin_search_student">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_search_dni"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/hint_search_dni"/>
            </android.support.design.widget.TextInputLayout>
            <!-- FIN - EditText búsqueda -->
            <!-- INICIO - Botón para buscar -->
            <Button
                android:id="@+id/btn_find"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/find_student"
                android:layout_marginTop="@dimen/button_margin_search_student"
                android:theme="@style/DefaultButtonDark"
                android:onClick="searchStudent"/>
            <!-- FIN - Botón para buscar -->
            <!-- INICIO - Botón agregar nuevo estudiante -->
            <Button
                android:id="@+id/btn_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_student"
                android:layout_marginTop="@dimen/button_margin_add_student"
                android:theme="@style/RaisedButtonDark"
                android:onClick="goCreateAccount"/>
            <!-- FIN - Botón agregar nuevo estudiante -->
            <!-- INICIO - Botón de editar -->
            <Button
                android:id="@+id/btn_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/list_student"
                android:layout_marginTop="@dimen/button_margin_edit_student"
                android:theme="@style/WarningButtonDark"
                android:onClick="goListStudents"/>
            <!-- -->
        </LinearLayout>
        <!-- FIN - LinearLayout -->
    </ScrollView>
    <!-- FIN - ScrollView -->
</android.support.design.widget.CoordinatorLayout>