<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreditsActivity">
    <!-- INICIO - al toolbar -->
    <include layout="@layout/actionbar_toolbar" />
    <!-- FIN - al toolbar -->
    <!-- INICIO - ScrollView -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <!-- INICIO - LinearLayout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/activity_vertical_margin">
            <!-- INICIO - Nombre completo -->
            <TextView
                android:id="@+id/tv_complete_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_complete_name"
                android:textSize="@dimen/textView_credits"
                android:textStyle="bold"
                android:textAlignment="center"/>
            <!-- FIN - Nombre completo -->
            <!-- INICIO - Horas -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/editText_margin_createAccount"
                android:theme="@style/EditTextColorBlack">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_hours_credit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_hours_create"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>
            <!-- FIN - Horas  -->
            <!-- INICIO - Minutos -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/editText_margin_createAccount"
                android:theme="@style/EditTextColorBlack">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_minutes_credit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_minutes_create"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>
            <!-- FIN - Minutos  -->
            <!-- INICIO - Tiempo acumulado -->
            <TextView
                android:id="@+id/tv_accumulated_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_accumulated_time"
                android:layout_marginTop="@dimen/editText_margin_createAccount"
                android:textStyle="bold"
                android:textAlignment="center"/>
            <!-- FIN - Tiempo acumulado -->
            <!-- INICIO - RelativeLayout, créditos -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="@dimen/layout_marginTop_credit">
                <!-- INICIO - Créditos totales -->
                <TextView
                    android:id="@+id/tv_total_credit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_total_credit"
                    android:textSize="@dimen/textView_credits"
                    android:layout_marginTop="@dimen/textView_margin_credit"
                    android:textStyle="bold"
                    />
                <!-- FIN - Créditos totales -->
                <!-- Botón -->
                <Button
                    android:id="@+id/btn_take_credit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_button_takeCredit"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="@dimen/editText_margin_createAccount"
                    android:layout_marginStart="@dimen/margin_start_left_botton_credit"
                    android:layout_marginLeft="@dimen/margin_start_left_botton_credit"
                    android:onClick="takeCredit"
                    android:theme="@style/RaisedButtonDark"/>
            </RelativeLayout>
            <!-- FIN - RelativeLayout, créditos -->
            <!-- Botón -->
            <Button
                android:id="@+id/btn_update_student"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_marginTop_credit"
                android:text="@string/text_button_update_student"
                android:theme="@style/RaisedButtonDark"
                android:onClick="addHours"/>
        </LinearLayout>
        <!-- FIN - LinearLayout -->
    </ScrollView>
    <!-- FIN - ScrollView -->
</android.support.design.widget.CoordinatorLayout>
