<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- INICIO - LinearLayout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!-- INICIO - TextView -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textView_title_take_credit"
            android:textAlignment="center"
            android:textSize="@dimen/textSize_textView_take_credit"
            android:background="@color/colorPrimaryDefault"
            android:textColor="@android:color/white"
            android:textStyle="bold"/>
        <!-- FIN - TextView -->
        <!-- INICIO - Nombre del estudiante -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/editText_margin_createAccount"
            android:theme="@style/EditTextColorBlack">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_take_credit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_take_credit" />
        </android.support.design.widget.TextInputLayout>
        <!-- INICIO - Nombre del estudiante -->
        <!-- INICIO - RelativeLayout, botones -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <!-- INICIO - Créditos totales -->
            <!-- Botón tomar crédito-->
            <Button
                android:id="@+id/btn_dialog_take_credit_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:text="@string/text_button_dialog_takeCredit_cancelar"
                android:theme="@style/DangerButtonDark"/>
            <!-- FIN - Créditos totales -->
            <!-- Botón tomar crédito-->
            <Button
                android:id="@+id/btn_take_credit"
                android:layout_width="@dimen/button_width_credit"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_button_dialog_takeCredit"
                android:theme="@style/RaisedButtonDark"/>
        </LinearLayout>
        <!-- FIN - RelativeLayout, botones -->
    </LinearLayout>
    <!-- FIN - LinearLayout -->
</android.support.design.widget.CoordinatorLayout>
