<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccountActivity">
    <!-- INICIO - al toolbar -->
    <include layout="@layout/actionbar_toolbar" />
    <!-- FIN - al toolbar -->
    <!-- INICIO - ScrollView -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <!-- INICIO - LinearLayout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/activity_vertical_margin">
            <!-- INICIO - Nombre del estudiante -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/editText_margin_createAccount"
                android:theme="@style/EditTextColorBlack">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name_create" />
            </android.support.design.widget.TextInputLayout>
            <!-- INICIO - Nombre del estudiante -->
            <!-- INICIO - Nombre  -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/editText_margin_createAccount"
                android:theme="@style/EditTextColorBlack">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_dni"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/hint_dni_create" />
            </android.support.design.widget.TextInputLayout>
            <!-- FIN - Nombre  -->
            <!-- INICIO - Horas -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/editText_margin_createAccount"
                android:theme="@style/EditTextColorBlack">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_hours"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_hours_create"
                    android:inputType="number"/>
            </android.support.design.widget.TextInputLayout>
            <!-- FIN - Horas  -->
            <!-- INICIO - Minutos -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/editText_margin_createAccount"
                android:theme="@style/EditTextColorBlack">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_minutes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_minutes_create"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>
            <!-- FIN - Minutos  -->
            <!-- Botón -->
            <Button
                android:id="@+id/joinUs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_button_createAccount"
                android:theme="@style/RaisedButtonDark"
                android:onClick="addStudent"/>
        </LinearLayout>
        <!-- FIN - LinearLayout -->
    </ScrollView>
    <!-- FIN - ScrollView -->
</android.support.design.widget.CoordinatorLayout>