<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/colorPrimary">
    <!-- INICIO - Linear para total de pantalla -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">
            <!-- INICIO - RelativeLayout para imagen -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5">
                <!-- INICIO - Imagen -->
                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@drawable/buho"/>
                <!-- FIN - Imagen -->
            </RelativeLayout>
            <!-- FIN - RelativeLayout para imagen -->
            <!-- INICIO - SCROLL -->
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:fillViewport="true">
                <!-- INICIO - LinearLayout Formulario Login -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_horizontal_login">
                    <!-- Nombre de usuario -->
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/EditTextColorWhite">
                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_username"/>
                    </android.support.design.widget.TextInputLayout>
                    <!-- END - Nombre de usuario -->
                    <!-- Password -->
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/EditTextColorWhite">
                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_password"
                            android:inputType="textPassword"/>
                    </android.support.design.widget.TextInputLayout>
                    <!-- END - Password -->
                    <!-- Botón -->
                    <Button
                        android:id="@+id/login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_button_login"
                        android:theme="@style/RaisedButtonDark"
                        android:onClick="goHome"/>
                    <!-- END - Botón -->
                </LinearLayout>
                <!-- FIN - LinearLayout Formulario Login -->
            </ScrollView>
            <!-- FIN - SCROLL -->
        </LinearLayout>
    <!-- FIN - Linear para total de pantalla -->
</android.support.design.widget.CoordinatorLayout>